# ds-learning

./: .gitignore  Cryptoprices.ipynb  README.md  pyproject.toml
demos/: addcolumndf.ipynb  demo-age-income.ipynb  test_df_percentage.py  testcsv.py
demos/.ipynb_checkpoints/: pandas-demo-funciones-checkpoint.ipynb
ds_learning/: .~lock.out-products.xlsx#  Missing-Data-Pandas.ipynb  More Visualizations.ipynb  Pandas-DataFrame.ipynb  Pandas-Reading-Plotting.ipynb  Pandas-Series.ipynb  Reading-CSV-TXT.ipynb  Reading-Excel.ipynb  Reading-SQL.ipynb  Reading_HTML.ipynb  booleanarray.py  numpy-arrays.ipynb  out-products.xlsx  simpsons-out.csv
ds_learning/.ipynb_checkpoints/: Cleaning not-null values-checkpoint.ipynb  Missing-Data-Pandas-checkpoint.ipynb  More Visualizations-checkpoint.ipynb  Pandas-DataFrame-checkpoint.ipynb  Pandas-Reading-Plotting-checkpoint.ipynb  Reading-CSV-TXT-checkpoint.ipynb  Reading-Excel-checkpoint.ipynb
ds_learning/Data-Analysis-Course/: Cleaning not-null values.ipynb  More Visualizations.ipynb  Pandas-DataFrame.ipynb  Pandas-Reading-Plotting.ipynb  Pandas-Series.ipynb  Reading-CSV-TXT.ipynb  Reading_HTML.ipynb
ds_learning/Data-Analysis-Course/data/: chinook.db  products2.xlsx
ds_learning/data/: .~lock.products.xlsx#
freecodecamp-notebooks/data-cleaning-rmotr-freecodecamp/: 4 - More Visualizations.ipynb
freecodecamp-notebooks/freecodecamp-intro-to-pandas/: 1 - Pandas - Series.ipynb  3 - Pandas - DataFrames.ipynb  4 - Pandas DataFrames exercises.ipynb
