[tool.poetry]
name = "DS-learning"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
matplotlib = "^3.5.0"
pandas = "^1.3.4"
seaborn = "^0.11.2"
jupyter = "^1.0.0"
jupyterlab = "^3.2.4"
pyarrow = "^6.0.1"
fastparquet = "^0.7.2"
python-language-server = "^0.36.2"
pynvim = "^0.4.3"
jupyter-tabnine = "^1.2.3"
beautifulsoup4 = "^4.11.1"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
