[tool.poetry]
name = "DS-learning"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10"
matplotlib = "^3.5.0"
pandas = "^1.3.4"
seaborn = "^0.11.2"
jupyter = "^1.0.0"
jupyterlab = "^3.2.4"
python-language-server = "^0.36.2"
pynvim = "^0.4.3"
jupyter-tabnine = "^1.2.3"
beautifulsoup4 = "^4.11.1"
SQLAlchemy = "^1.4.45"
pyarrow = "^10.0.1"
fastparquet = "^2022.12.0"
lxml = "^4.9.2"
openpyxl = "^3.0.10"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
